# educational-c-http-server

./: CMakeLists.txt  README.md
server/: server.c  server.h
